// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assets 1`] = `
"import font from './cVoexIsj.woff';
import image from './bAFTozQS.png';
import deep from './ceBqZEDY.gif';
import style from './vAjnOYXZ.css';

var assets = \`\${font}|\${image}|\${deep}|\${style}\`;

export default assets;
"
`;

exports[`Assets written to subfolder 1`] = `
"import font from './static/cVoexIsj.woff';
import image from './static/bAFTozQS.png';
import deep from './static/ceBqZEDY.gif';
import style from './static/vAjnOYXZ.css';

var assets = \`\${font}|\${image}|\${deep}|\${style}\`;

export default assets;
"
`;

exports[`Keep Name 1`] = `
"import font from './SourceSerifPro-Bold.ttf_cVoexIsj.woff';
import image from './image_bAFTozQS.png';
import deep from './blank_ceBqZEDY.gif';
import style from './css-font_vAjnOYXZ.css';

var assets = \`\${font}|\${image}|\${deep}|\${style}\`;

export default assets;
"
`;

exports[`Mixed Asset Source Locations 1`] = `
"import font from './cVoexIsj.woff';
import svg from './foixBwnR.svg';
import deep from './ceBqZEDY.gif';
import style from './vAjnOYXZ.css';

/* eslint-disable filenames/match-regex */

var assetsMixed = \`\${font}|\${svg}|\${deep}|\${style}\`;

export default assetsMixed;
"
`;

exports[`Outside Asset Source Location 1`] = `
"import font from './cVoexIsj.woff';
import image from './bAFTozQS.png';
import deep from './ceBqZEDY.gif';
import style from './vAjnOYXZ.css';

/* eslint-disable filenames/match-regex */

var assetsOutside = \`\${font}|\${image}|\${deep}|\${style}\`;

export default assetsOutside;
"
`;
